--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,24 @@ requests==2.18.4
 requests-oauthlib==0.8.0
 urllib3==1.22
 whitenoise==3.3.1
+certifi==2018.1.18
+chardet==3.0.4
+defusedxml==0.5.0
+dj-database-url==0.5.0
+Django==2.0.3
+django-appconf==1.0.2
+django-bootstrap-form==3.4
+django-heroku==0.3.1
+django-user-accounts==2.0.3
+githubpy==1.1.0
+idna==2.6
+oauthlib==2.0.7
+Pillow==5.1.0
+pinax-theme-bootstrap==8.0.1
+psycopg2==2.7.4
+python3-openid==3.1.0
+pytz==2018.3
+requests==2.18.4
+requests-oauthlib==0.8.0
+urllib3==1.22
+whitenoise==3.3.1
